<resources>
    <string name="app_name">Planets</string>
    <string name="search_title">Search</string>
    <string name="action_settings">Settings</string>
    <string-array name="mars_moons">
        <item>Phobos</item>
        <item>Deimos</item>
    </string-array>
    <string-array name="jupiter_moons">
        <item>Europa</item>
        <item>Io</item>
        <item>Ganymede</item>
        <item>Calypso</item>
    </string-array>
    <string-array name="settings">
        <item>Settings</item>
    </string-array>
    <string-array name="themes">
        <item name="1">Red</item>
        <item name="2">Orange</item>
        <item name="3">Blue</item>
        <item name="4">Green</item>
        <item name="5">Purple</item>
        <item name="6">Dark</item>
    </string-array>
    <string-array name="themesEntries">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
    </string-array>
    <string-array name="donations">
        <item name="1">$1</item>
        <item name="2">$5</item>
        <item name="3">$10</item>
        <item name="4">$25</item>
        <item name="5">$50</item>
    </string-array>
    <string-array name="donationEntries">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
    </string-array>
    <string name="pref_cate_title_1">Design</string>
    <string name="pref_5">Theme</string>
    <string name="sun_image">Picture of Sun</string>
    <string name="mercury_image">Picture of Mercury</string>
    <string name="venus_image">Picture of Venus</string>
    <string name="earth_image">Picture of Earth</string>
    <string name="mars_image">Picture of Mars</string>
    <string name="jupiter_image">Picture of Jupiter</string>
    <string name="saturn_image">Picture of Saturn</string>
    <string name="uranus_image">Picture of Uranus</string>
    <string name="neptune_image">Picture of Neptune</string>
    <string name="earth_satellite">Satellite (1)</string>
    <string name="moon_title">Moon</string>
    <string name="moon_image">Picture of the Moon</string>
    <string name="moon_sub_title_1">Data</string>
    <string name="moon_description">Circumference at Equator: 10,917.0 km\nDiameter: 3,475 km\nMass: 73,476,730,924,573,500 million kg (0.0123 x Earth)\nAverage Distance from Earth: 384,400 km\nLength of Orbit: 27.3 Earth days\nSurface Temperature: -233 to 123 °C</string>
    <string name="moon_sub_title_2">Facts</string>
    <string name="moon_description_2">The Moon (or Luna) is the Earth’s only natural satellite and was formed 4.6 billion years ago around some 30–50 million years after the formation of the solar system. The Moon is in synchronous rotation with Earth meaning the same side is always facing the Earth. The first unmanned mission to the Moon was in 1959 by the Soviet Lunar Program with the first manned landing being Apollo 11 in 1969.</string>
    <string name="moon_button">Satellite (1)</string>
    <string name="jupiter_sat_1">Satellite (4)</string>
    <string name="europa_title">Europa</string>
    <string name="europa_image">Picture of Europa</string>
    <string name="europa_sub_title_1">Data</string>
    <string name="europa_description">Discovered by: Galileo Galilei, Simon Marius\nDiscovery date: 8 January 1610\nPeriapsis: 664,862 km\nApoapsis: 676,938 km\nMean orbit radius: 670,900 km\nEccentricity: 0.009\nOrbital period: 3.551181 days\nAverage orbital speed: 13.740 km/s\nInclination: 0.470° (to Jupiter\'s equator)</string>
    <string name="europa_sub_title_2">Facts</string>
    <string name="europa_description_2">In Greek mythology, Europa was abducted by Zeus, who had taken the form of a spotless white bull to seduce her. She decorated the “bull” with flowers and rode on its back to Crete. Once in Crete, Zeus-who is a counterpart of the Roman god Jupiter-then transformed back to his original form and was seduced by Zeus. Europa as the queen of Crete and bore Zeus many children.\nFor centuries, the four largest moons of Jupiter didn\'t have actual names. Instead, Galileo gave each moon a number, from one through four. Of the four large moons, Europa was believed to be the second closest to Jupiter, which is why Galileo also called it Jupiter II.\n\nThe Galileo mission, launched by NASA in 1989, is responsible for much of the information we have on Jupiter and the bodies surrounding it. It took more than six years for the unmanned Galileo spacecraft to reach its destination. The craft stayed in orbit of Jupiter from December 8, 1995 until Sept. 21, 2003.\n\nA prominent feature of Europa is its high degree of reflectivity. Europa\'s icy crust gives it an albedo-light reflectivity—of 0.64, one of the highest of all of the moons in the entire solar system.\nScientists estimate that Europa’s surface is about 20 million to 180 million years old, which makes it fairly young.\nObserving pictures taken by the Galileo spacecraft, scientists believe Europa is made of silicate rock, and has an iron core and rocky mantle, much like the Earth does. Unlike the interior of Earth, however, the rocky interior of Europa is surrounded by a layer of ice that is approximately 62 miles (or 100 km) thick.</string>
    <string name="titan_description">Discovered by: Christiaan Huygens\nDiscovery date: March 25, 1655\nPeriapsis: 1,186,680 km\nApoapsis: 1,257,060 km\nSemi-major axis: 1,221,870 km\nEccentricity: 0.0288\nOrbital period: 15.945 days\nAverage orbital speed: 5.57 km/s (calculated)\nInclination: 0.34854° (to Saturn\'s equator)</string>
    <string name="mars_sat_1">Satellite (2)</string>
    <string name="phobos_title">Phobos</string>
    <string name="phobos_image">Picture of Phobos</string>
    <string name="phobos_sub_title_1">Data</string>
    <string name="phobos_description">Dimensions: 27 × 22 × 18 km\nMean radius: 11.2667 km (1.76941 mEarths)\nMass: 1.0659×1016 kg (17.8477 nEarths)\nMean density: 1.876 g/cm cubed\nEquatorial Surface Gravity: 0.0057 m/s squared (581.4 µg)\nEscape Velocity: 11.39 m/s (41 km/h)\nTemperature ≈ 233 K\nApparent magnitude: 11.3</string>
    <string name="phobos_sub_title_2">Facts</string>
    <string name="phobos_description_2">In the early 17th century, German astronomer Johannes Kepler proposed that Mars might host two moons, given that it lay between the Earth and Jupiter, which were known to have one and four satellites. No evidence of such moons could be found. Although most people thought that Mars had no moons, American astronomer Asaph Hall performed a methodical study from the U.S. Naval Observatory in Washington, D.C., searching closer to the planet than previous surveys.\n\nAfter searching without success, a frustrated Hall was about to give up but his wife, Angelina, urged him to continue. The next night, August 12, 1877, he discovered the moon that would later be known as Deimos. Six days later, he found Phobos as well. The two moons lay so close to their primary that they were hidden by the planet\'s glare. Asteroid-sized, they are also two of the smallest moons in the solar system, with the larger Phobos 7.24 times as massive as its companion, Deimos.</string>
    <string name="mars_sat_2">Satellite (2)</string>
    <string name="deimos_title">Deimos</string>
    <string name="deimos_image">Picture of Deimos</string>
    <string name="deimos_sub_title_1">Data</string>
    <string name="deimos_description">Dimensions: 7.8 × 6.0 × 5.1 km\nMean Radius: 6.2  ±  0.18 km  (0.97316 mEarths)\nMass: 1.4762×1015 kg (24.7179 nEarths)\nMean Density: 1.471±0.166 g/cm cubed\nEquatorial Surface Gravity: 0.003 m/s squared (306 µg)\nEscape Velocity: 5.556 m/s (20 km/h)\nTemperature ≈ 233 K\nApparent Magnitude: 12.45 ± 0.05 </string>
    <string name="deimos_sub_title_2">Facts</string>
    <string name="deimos_description_2">On August 12, 1877, the focused search for Martian moons by American astronomer Asaph Hall resulted in the discovery of Deimos. Six days later, he identified the second Martian moon, Phobos.\nThe existence of the moons had been suggested years before, when Johannes Kepler proposed that since Earth hosted one moon and Jupiter four (as only the Galilean moons were known at the time), Mars might have two moons in orbit around it. However, no signs of such moons existed until Hall undertook his careful search.\nUsing a 26-inch refractor at the U.S. Naval Observatory in Washington, D.C., Hall made a methodical study of the region around the red planet. Peering closer to Mars than previous astronomers, he found Deimos circling only 14,576 miles (23,458 kilometers) from the center of the planet, traveling around its equator. Phobos orbited even closer in. Their close proximity and small size had kept them hidden in the glare from the planet.\nLike many objects in the solar system, the Martian moons take their names from Greek mythology. In Homer\'s ancient poem, \"The Iliad,\" Deimos (Flight) and Phobos (Fear) were the twin sons of Mars (Ares to the Greeks), and accompany him into battle.</string>
    <string name="sun_title">Sun</string>
    <string name="sun_sub_title_1">Data</string>
    <string name="sun_description">Age: 4.6 Billion Years\nType: Yellow Dwarf (G2V)\nDiameter: 1,392,684 km\nCircumference at Equator: 4,370,005.6 km\nMass: 1,989,100,000,000,000,000,000 billion kg (333,060 x Earth)\nSurface Temperature: 5500 °C</string>
    <string name="sun_sub_title_2">Facts</string>
    <string name="saturn_sub_title_1">Data</string>
    <string name="saturn_description">Mass: 568,319,000,000,000,000 billion kg (95.16 x Earth)\nEquatorial Diameter: 120,536 km\nPolar Diameter: 108,728 km\nEquatorial Circumference: 365,882 km\nKnown Satellites: 62\nNotable Satellites: Titan, Rhea and Enceladus\nOrbit Distance: 1,426,666,422 km (9.58 AU)\nOrbit Period: 10,755.70 Earth days (29.45 Earth years)\nSurface Temperature: -139 °C\nFirst Record: 8th century BC\nRecorded By: Assyrians</string>
    <string name="saturn_sub_title_2">Facts</string>
    <string name="saturn_description_2" formatted="false">Saturn is the sixth planet from the Sun and is named after the Roman god of wealth.\n\nSaturn is the second largest planet in the solar system and is best known for its fabulous rings. The rings were not known to exist until Galileo first observed them in 1610.</string>
</resources>